--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@mui/x-date-pickers": "^7.10.0",
     "dayjs": "^1.11.11",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.25.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
